--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          user: BEPb
+          user: jujimeizuo
           config_timezone: Asia/Shanghai
 #          config_display: columns  # отображать информацию по колонкам
           committer_message: "chore: update metrics"
